--- a/grc338/restaurantmenucss/style.css
+++ b/grc338/restaurantmenucss/style.css
@@ -18,7 +18,7 @@ body {
 h1 {
 	background-color: rgb(154,152,171);
 	color: rgb(247,247,247); /* Same as body background. */
-	font-size: 25pt;
+	font-size: 2rem;
 	padding: 1.874rem 1.25rem 0rem; /* You want three values. */
 	font-weight: bold;
 	text-transform: uppercase;
@@ -35,7 +35,7 @@ h1 span {
 h2 {
 	background-color: rgb(154,152,171);
 	color: rgb(247,247,247);
-	font-size: 20pt;
+	font-size: 1.66rem;
 	padding: 1.25rem 1.25rem;
 	font-family: serif;
 	font-weight: bold;
@@ -44,7 +44,7 @@ h2 {
 h3 {
 	margin: 3.125rem 1.25rem 0rem; /*Three values again. You got the idea.*/
 	padding-top: 0.625rem;
-	font-size: 15pt;
+	font-size: 1.25rem;
 	color: rgb(202,0,0);
 	font-weight: bold;
 	text-transform: uppercase;
