--- a/grc338/restaurantmenucss/style.css
+++ b/grc338/restaurantmenucss/style.css
@@ -26,7 +26,7 @@ h1 {
 
 /* You’ll need to add a span element to your HTML. */
 h1 span { 	
-	font-family: sans-serif;
+	font-family: serif;
 	font-style: italic;
 	font-weight: normal;
 	text-transform: lowercase;
