--- a/grc338/css-mobile-first/lasagnastyle.css
+++ b/grc338/css-mobile-first/lasagnastyle.css
@@ -5,6 +5,7 @@ html, body, div, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, 
 
 img {
     width: 100%; /*Please leave this line.*/
+    display: block; 	
 }
 
 body {
