--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -5,7 +5,7 @@ body {
     font-family: poppins, sans-serif;
     font-weight: 400;
     font-size: 1rem;
-    background: #f0f0ff;
+    background: #f5f0f1;
     color: #24171C;
 }
 
@@ -24,7 +24,7 @@ img {
     padding-top: 1rem;
 }
 
-h1, h2, h3, p, figcaption {
+h1, h2, h3, p, figcaption, figure{
     margin: 0rem 0.75rem;
 }
 
@@ -72,12 +72,12 @@ ul {
 }
 
 section {
-    border-bottom: 1.6pt solid #24171C;
+    border-bottom: 1.5pt dashed #604D53;
 }
 
 figcaption {
     font-size: 0.85rem;
-    padding: 0rem 1.5rem 1.5rem;
+    padding: 0rem 1.4rem 1.5rem;
 }
 
 footer {
