--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -4,9 +4,11 @@ html, body, div, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, 
 body {
     font-family: poppins, sans-serif;
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 0.9rem;
     background: #f5f0f1;
     color: #24171C;
+    line-height: 1.5rem;
+    margin: 0rem 0.75rem;
 }
 
 a {
@@ -15,8 +17,8 @@ a {
 }
 
 div.container {
-    max-width: 40em;
-    margin: auto;
+    max-width: 80em;
+    margin: 0 auto 3rem;
 }
 
 img {
@@ -24,13 +26,10 @@ img {
     padding-top: 1rem;
 }
 
-h1, h2, h3, p, figcaption, figure{
-    margin: 0rem 0.75rem;
-}
-
 h1 {
     padding-top: 1.5rem;
     padding-bottom: 0.5rem;
+    width: 60%;
 }
 
 h2 {
@@ -54,7 +53,7 @@ li{
     font-size: 1.2rem;
     letter-spacing: 0.05rem;
     display: inline;
-    padding: 0.45rem;
+    padding-right: 0.45rem;
 }
 
 li a {
@@ -68,7 +67,6 @@ p {
 ul {
     list-style-type: none;
     padding-bottom: 1rem;
-    text-align: center;
 }
 
 section {
@@ -77,9 +75,113 @@ section {
 
 figcaption {
     font-size: 0.85rem;
-    padding: 0rem 1.4rem 1.5rem;
+    padding-bottom: 1.5rem;
 }
 
 footer {
     padding-top: 1rem;
+}
+
+@media screen and (min-width: 60rem){
+    div.container {
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-gap: 0 1.5rem;
+    }
+
+    header  {
+        grid-column: 1/3;
+    }
+
+    main  {
+        grid-column: 1/2;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 0 1.5rem;
+    }
+
+    section.main_story {
+        grid-column: 2/4;
+        grid-row: 1/3;
+        display: flex;
+        flex-direction: column;
+    }
+
+    section.main_story figure {
+        padding-top: 1rem;
+        flex: 1 0 28em;
+        display: flex;
+        flex-direction: column;
+    }
+
+    section.main_story figure div{
+        flex: 1 0 28em;
+        background-image: url(cookie_chem.jpeg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    section.main_story figure div img {
+        height: 100%;
+        opacity: 0;
+    }
+
+    section.main_story figure figcaption {
+        flex: 0 0 3rem;
+    }
+
+    section.main_story h3 {
+        flex: 0 0 auto;
+        margin: 0;
+    }
+
+    section.main_story p {
+        flex: 0 0 auto;
+        margin: 0;
+    }
+
+    aside  {
+        grid-column: 2/3;
+    }
+
+
+}
+
+@media screen and (min-width: 40rem) and (max-width: 60rem){
+    div.container {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-gap: 0 1.5rem;
+    }
+
+    header  {
+        grid-column: 1/3;
+    }
+
+    main  {
+        grid-column: 1/2;
+    }
+
+    section.main_story figure {
+        padding-top: 1rem;
+    }
+
+    section.main_story figure div{
+        flex: 1 0 28em;
+        background-image: url(cookie_chem.jpeg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    section.main_story figure div img {
+        height: 100%;
+        opacity: 0;
+    }
+
+    aside  {
+        grid-column: 2/3;
+    }
+
 }
