--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -8,7 +8,7 @@ body {
     background: #f5f0f1;
     color: #24171C;
     line-height: 1.5rem;
-    margin: 0rem 0.75rem;
+    margin: 0rem 1.5rem;
 }
 
 a {
@@ -19,6 +19,10 @@ a {
 div.container {
     max-width: 80em;
     margin: 0 auto 3rem;
+}
+
+nav {
+    margin-bottom: 1.5rem;
 }
 
 img {
@@ -64,11 +68,6 @@ p {
     padding-bottom: 1rem;
 }
 
-ul {
-    list-style-type: none;
-    padding-bottom: 1rem;
-}
-
 section {
     border-bottom: 1.5pt dashed #604D53;
 }
@@ -81,6 +80,128 @@ figcaption {
 footer {
     padding-top: 1rem;
 }
+
+/* gallery section */
+
+body {
+	box-sizing: border-box;
+}
+
+
+div.gallery_container {
+    max-width: 80rem;
+    margin: 0 auto 3rem;
+}
+
+div.gallery_container input {
+    display: none;
+}
+
+div.gallery_container main {
+    position: relative;
+    overflow: none;
+    padding-bottom: calc(72% + 3rem);
+}
+
+figure.gallery {
+    margin: 0;
+    width: calc(100%-2rem);
+    position: absolute;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+input:nth-of-type(1):checked ~ main figure:nth-of-type(1),
+input:nth-of-type(2):checked ~ main figure:nth-of-type(2),
+input:nth-of-type(3):checked ~ main figure:nth-of-type(3),
+input:nth-of-type(4):checked ~ main figure:nth-of-type(4),
+input:nth-of-type(5):checked ~ main figure:nth-of-type(5),
+input:nth-of-type(6):checked ~ main figure:nth-of-type(6),
+input:nth-of-type(7):checked ~ main figure:nth-of-type(7),
+input:nth-of-type(8):checked ~ main figure:nth-of-type(8){
+    opacity: 1;
+}
+
+nav.gallery_nav {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 0.2rem;
+}
+
+/* End of gallery section */
+
+/* Subscription section */
+
+div.news_container {
+    max-width: 80rem;
+    margin: auto;
+}
+
+div.newsletter_container {
+    max-width: 30rem;
+}
+
+section.personal-info ul li {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 1rem;
+}
+
+section.personal-info ul li input[type="text"],
+section ul li input[type="email"],
+section ul li input[type="tel"],
+section ul li select {
+	flex: 1 1 20rem;
+	box-sizing: border-box;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+    background: #fcfcfc;
+	border: 1px solid #e8e8e8;
+    padding: 0.3rem 0.5rem;
+}
+
+input::placeholder {
+    color:  #86767b;
+}
+
+section.personal-info ul li label {
+	flex: 0 0 3.5rem;
+}
+
+ul {
+	padding: 0;
+	list-style-type: none;
+}
+
+section.personal-info {
+    border: none;
+    padding: 1.4rem 0rem;
+}
+
+textarea {
+	box-sizing: border-box;
+    margin-bottom: 1rem;
+	display: block;
+	width: 100%;
+	height: 6rem;
+	background: #fcfcfc;
+	border: 1px solid #e8e8e8;
+	padding: 0.4rem;
+	font-family: sans-serif;
+	color: #777;
+	}
+
+@media only screen and (min-width: 40em) {
+
+  div.container {
+    margin: auto;
+  }
+
+}
+/* End of subscription section */
 
 @media screen and (min-width: 60rem){
     div.container {
@@ -109,13 +230,13 @@ footer {
 
     section.main_story figure {
         padding-top: 1rem;
-        flex: 1 0 28em;
+        flex: 1 0 28rem;
         display: flex;
         flex-direction: column;
     }
 
     section.main_story figure div{
-        flex: 1 0 28em;
+        flex: 1 0 28rem;
         background-image: url(cookie_chem.jpeg);
         background-repeat: no-repeat;
         background-size: cover;
@@ -145,13 +266,12 @@ footer {
         grid-column: 2/3;
     }
 
-
 }
 
 @media screen and (min-width: 40rem) and (max-width: 60rem){
     div.container {
         display: grid;
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 2fr 1.2fr;
         grid-gap: 0 1.5rem;
     }
 
@@ -168,7 +288,7 @@ footer {
     }
 
     section.main_story figure div{
-        flex: 1 0 28em;
+        flex: 1 0 2rem;
         background-image: url(cookie_chem.jpeg);
         background-repeat: no-repeat;
         background-size: cover;
