--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -16,7 +16,7 @@ a {
     color: #24171C;
 }
 
-div.container {
+div.container, div.main_story_container, div.gallery_container, div.news_container{
     max-width: 80em;
     margin: 0 auto 3rem;
 }
@@ -87,12 +87,6 @@ body {
 	box-sizing: border-box;
 }
 
-
-div.gallery_container {
-    max-width: 80rem;
-    margin: 0 auto 3rem;
-}
-
 div.gallery_container input {
     display: none;
 }
@@ -133,7 +127,6 @@ nav.gallery_nav {
 /* Subscription section */
 
 div.news_container {
-    max-width: 80rem;
     margin: auto;
 }
 
@@ -196,18 +189,66 @@ textarea {
 
 @media only screen and (min-width: 40em) {
 
-  div.container {
+  div.container, div.main_story_container{
     margin: auto;
   }
 
 }
 /* End of subscription section */
 
+@media screen and (min-width: 40rem) and (max-width: 60rem){
+    div.container, div.main_story_container {
+        display: grid;
+        grid-template-columns: 2fr 1.2fr;
+        grid-gap: 0 1.5rem;
+    }
+
+    header  {
+        grid-column: 1/3;
+    }
+
+    main  {
+        grid-column: 1/2;
+    }
+
+    section.main_story figure {
+        padding-top: 1rem;
+    }
+
+    section.main_story figure div{
+        flex: 1 0 2rem;
+        background-image: url(cookie_chem.jpeg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    section.main_story figure div img {
+        height: 100%;
+        opacity: 0;
+    }
+
+    aside  {
+        grid-column: 2/3;
+    }
+
+}
+
 @media screen and (min-width: 60rem){
     div.container {
         display: grid;
         grid-template-columns: 3fr 1fr;
         grid-gap: 0 1.5rem;
+    }
+
+    div.main_story_container {
+        display: grid;
+        grid-template-columns: 4fr 2.5fr 2fr;
+        grid-gap: 0 1.5rem;
+    }
+
+    div.main_story_container footer{
+            grid-column: 1/2;
     }
 
     header  {
@@ -266,42 +307,8 @@ textarea {
         grid-column: 2/3;
     }
 
-}
-
-@media screen and (min-width: 40rem) and (max-width: 60rem){
-    div.container {
-        display: grid;
-        grid-template-columns: 2fr 1.2fr;
-        grid-gap: 0 1.5rem;
-    }
-
-    header  {
-        grid-column: 1/3;
-    }
-
-    main  {
+    article {
         grid-column: 1/2;
-    }
-
-    section.main_story figure {
-        padding-top: 1rem;
-    }
-
-    section.main_story figure div{
-        flex: 1 0 2rem;
-        background-image: url(cookie_chem.jpeg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-    }
-
-    section.main_story figure div img {
-        height: 100%;
-        opacity: 0;
-    }
-
-    aside  {
-        grid-column: 2/3;
     }
 
 }
